# glc_v1_modal_testing

./: .gitignore  FINDINGS.md  README.md  modal_app.py  pyproject.toml
glc/: db.py  main.py
glc/audit/: store.py
glc/policy/: remote.py
glc/routes/: channels.py  chat.py  control.py  speak.py  transcribe.py
glc/security/: auth.py
glc/voice/stt/providers/whisper_cpp/: wrapper.py
tests/: conftest.py  test_adapter_separation.py  test_audit_hash_chain.py  test_audit_log.py  test_channel_spoofing.py  test_constant_time_auth.py  test_cost_ledger_validation.py  test_data_plane_auth.py  test_data_plane_rate_limit.py  test_findings_console_c2_lockout.py  test_findings_console_live_probe.py  test_findings_console_modal_detect.py  test_info_disclosure_auth.py  test_modal_image_reproducibility.py  test_pairing_lockout.py  test_policy_remote.py  test_ssrf_guard.py  test_transcribe_route.py  test_v9_compat.py  test_verbose_errors.py  test_whisper_cpp_path.py  test_ws_auth.py
tools/findings_console/: README.md  __init__.py  checks_http.py  checks_inprocess.py  checks_live_probe.py  checks_static.py  checks_ws.py  gitinfo.py  harness.py  modal_detect.py  models.py  registry.py  render.py  runner.py  sections.py  server.py  store.py
with_fixes/: modal_app.py
with_fixes/glc/: main.py
with_fixes/glc/audit/: schema.sql  store.py
with_fixes/glc/channels/: remote.py
with_fixes/glc/channels/catalogue/discord/tests/: README.md  run_discord_bridge.py  send_test_message.py  test_live_discord.py
with_fixes/glc/channels/catalogue/twilio_sms/: server.py
with_fixes/glc/policy/: engine.py
with_fixes/glc/routes/: channels.py  control.py  transcribe.py
with_fixes/glc/security/: pairing.py  rate_limits.py
without_fixes/: modal_app.py
